program_interaction/a
  File "<string>", line 1
    import sys; print(eval(str("
                               ^
SyntaxError: EOL while scanning string literal
ates not allowed
ed
   ^
SyntaxError: unexpected EOF while parsing
                                                                                                                ^
SyntaxError: EOL while scanning string literal
